08_jenkins/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins-service
  namespace: test-namespace
spec:
  type: NodePort
  selector:
    k8s-app: jenkins
  ports:
    - port: 8080
      name: web
      targetPort: 8080
    - port: 50000
      name: agent
      targetPort: 50000
